--- a/src/shared/components/MasonryView/MasonrySection/masonrySection.scss
+++ b/src/shared/components/MasonryView/MasonrySection/masonrySection.scss
@@ -1,18 +1,25 @@
 $max-width: 750px;
 $max-height: 350px;
 .masonry-section {
-	position: relative;
-	cursor: pointer;
-	&-footer {
-		background: white;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		top: 60%;
-	}
-	&-image {
-		width: 100%;
-		height: auto;
-	}
+    position: relative;
+    cursor: pointer;
+    &-footer {
+        opacity: 1;
+        background: white;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 60%;
+        p {
+            font-size: 1.6em;
+            position: relative;
+            text-overflow: ellipsis;
+            color: red;
+        }
+    }
+    &-image {
+        width: 100%;
+        height: auto;
+    }
 }
